# subcli-cpp

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  README.subcli.md
.github/workflows/: release-validation.yml  release.yml
docs/: capability-matrix.md  cli-glossary.zh-CN.md  config-file.md  profile-schema.md
docs/superpowers/plans/: 2026-04-25-product-readiness.md  2026-04-26-export-asset-checks.md  2026-04-26-profile-assets.md  2026-04-27-profile-driven-export.md  2026-04-28-template-policy-changelog.md  2026-04-28-template-policy.md  2026-04-28-v2-ecosystem-workspace-implementation.md  2026-04-29-v0.2.2-release.md  2026-04-30-code-review-execution.md  2026-05-01-v0.2.5-maintainable-feature-platform.md  2026-05-05-v0.2.6-process-management.md  2026-05-13-v0.2.7-three-platform-maintenance.md  2026-05-16-stability-maintenance.md
docs/superpowers/reviews/: 2026-04-30-code-review-checklists.md  2026-04-30-code-review-evidence.md  2026-04-30-code-review-report.md  2026-05-11-release-readiness.md  2026-05-14-v0.2.7-release-readiness.md  2026-05-16-stability-maintenance-readiness.md
docs/superpowers/specs/: 2026-04-28-template-policy-design.md  2026-04-28-v2-ecosystem-workspace-design.md  2026-04-30-code-review-plan-design.md  2026-04-30-v0.2.4-cli-ux-help-config-docs-design.md  2026-05-01-v0.2.5-maintainable-feature-platform-design.md  2026-05-05-v0.2.6-process-management-design.md  2026-05-13-v0.2.7-three-platform-maintenance-design.md  2026-05-16-stability-maintenance-design.md
include/subcli/: assets.hpp  capabilities.hpp  capability_matrix.hpp  cli_completion.hpp  cli_output.hpp  config_service.hpp  core_check.hpp  core_discovery.hpp  core_runtime.hpp  daemon.hpp  daemon_process.hpp  diagnostic.hpp  diagnostic_service.hpp  environment.hpp  exporter.hpp  fetch.hpp  logs.hpp  models.hpp  node.hpp  parser.hpp  platform.hpp  profile.hpp  profile_explain.hpp  protocol_registry.hpp  registry.hpp  runtime_process.hpp  store.hpp  subscription_service.hpp  tag_utils.hpp  util.hpp  workspace.hpp
include/subcli/commands/: config_command.hpp  doctor_command.hpp  sub_command.hpp
packaging/: verify_package.sh
packaging/systemd/: subcli-daemon.service
profiles/: bypass-cn.json  direct.json  global.json
src/: assets.cpp  capabilities.cpp  capability_matrix.cpp  cli_completion.cpp  cli_output.cpp  config_service.cpp  core_check.cpp  core_discovery.cpp  core_runtime.cpp  daemon.cpp  daemon_process.cpp  diagnostic_service.cpp  environment.cpp  exporter.cpp  exporter_common.cpp  exporter_internal.hpp  exporter_mihomo.cpp  exporter_singbox.cpp  exporter_xray.cpp  fetch.cpp  logs.cpp  main.cpp  node.cpp  parser.cpp  parser_common.cpp  parser_internal.hpp  parser_mihomo.cpp  parser_singbox.cpp  parser_uri.cpp  parser_xray.cpp  platform_common.cpp  platform_posix.cpp  platform_windows.cpp  profile.cpp  profile_explain.cpp  protocol_registry.cpp  registry.cpp  runtime_process.cpp  store.cpp  subscription_service.cpp  (+3 more)
src/commands/: config_command.cpp  doctor_command.cpp  sub_command.cpp
templates/: mihomo_base.yaml  mihomo_tun.yaml  singbox_base.json  singbox_tun.json  xray_base.json  xray_tun.json
tests/: cli_basic_smoke.cmake  cli_smoke.sh  platform_boundary_scan.cmake  platform_test_support.cpp  platform_test_support.hpp  stability_http_server.cpp  stability_http_server.hpp  stability_package_journey.cmake  stability_runner.cpp  subcli_tests.cpp
tests/fixtures/: basic-sub.txt  mihomo-provider-sub.yaml  mihomo-remote-provider-sub.yaml  modern-uri-sub.txt  provider-nodes.yaml
tests/stability_fixtures/subscriptions/: base64.txt  malformed.txt  plain.txt  unicode.txt
